2006-12-14  Loic Dachary  <loic@dachary.org>

        * Release 1.0.33

	* tests/conf/poker.client.xml.in: version bump

	* tests/test-pokerservice.py.in: test tournaments

	* pokernetwork/pokerservice.py: tourney delays are parameters
	cancel timer is less verbose
	updateTourneySchedule get regular tournaments instead of just sit_n_go
	checkTourneySchedule launches regular tournaments
	spawnTourney uses players_min player_timeout prize_min and bailor serial
	             (bailor being the player paying for the guaranteed prize pool)
	             register the tourney cancelation callback
	never use tourneys_schedule table on an already spawned tournament because
	 the entry is gone for regular tournaments

	tourneyFinished use the bailor of a guaranteed prize pool if needed
	fix missing tourney rake (because of string conversion)
	tourneyRegister don't send to client if None
	tourneyCancel calls unregister on all players

	* pokerclient2d/poker2d.xml.in, pokerclient2d/poker2d-test.xml, examples/poker.bot.xml, examples/poker.server-monotone.xml, examples/poker.server.xml:
	version bump

	* debian/python-poker-network.links: 33 sql edits

	* debian/control, debian/control.breezy, debian/control.dapper, debian/control.edgy, debian/control.etch, debian/control.hoary, debian/control.sarge, debian/control.unstable:
	depends on poker-engine 1.0.21 or above

	* database/schema.sql.in: gender & birthdate in user_private
	tourneys have players_min + player_timeout + prize_min + bailor_serial
	tourneys buy_in & rake have default
	tourneys indices
	all tables are InnoDB

	* database/1.0.32-1.0.33.sql: tournament edits

	* database/1.0.31-1.0.32.sql: add version

	* conf/poker.bot.xml.in, conf/poker.client.xml.in, conf/poker.server.xml.in:
	version bump

	* Makefile.am: add database upgrade scripts

2006-12-13  Cedric Pinson  <cpinson@freesheep.org>

	* gentoo/dev-games/poker-network/poker-network-1.0.32-r1.ebuild: ops

2006-12-12  Loic Dachary  <loic@dachary.org>
