@@ -1,6 +1,16 @@
-2006-12-14  Loic Dachary  <loic@dachary.org>
+2006-12-21  Cedric Pinson  <cpinson@freesheep.org>
 
         * Release 1.0.33
+
+	* pokernetwork/pokerchildren.py, pokernetwork/pokerclient.py, pokernetwork/upgrade.py:
+	Added checkNetwork, checkClientVersionFailedNoNetwork, checkClientVersionFailedHostDoesNotRespond and 2 signals in PokerRsync
+
+	* pokerclient2d/poker2d.py:
+	added the check of the network at start of the game (if a problem it quit)
+	added a test if there is a connexion problem while upgrading
+	change the resolver behaviour in poker2d
+
+2006-12-14  Loic Dachary  <loic@dachary.org>
 
 	* tests/conf/poker.client.xml.in: version bump
 
